@@ -568,7 +568,7 @@ public class InformationSchemaTest extends SQLTransportIntegrationTest {
     @Test
     public void testDefaultColumns() {
         execute("select * from information_schema.columns order by table_schema, table_name");
-        assertEquals(496, response.rowCount());
+        assertEquals(497, response.rowCount());
     }
 
     @Test
